Adds basic styling to lots of the page
 - Also adds a couple of test blogs. One which tests
   each markdown element

 - Also adds an example blog with real content

--- a/not-found.html
+++ b/not-found.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    {{> meta }}
+    {{> meta pageTitle="Ross's Blog" }}
   </head>
   <body>
     {{> header }}
