--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
-    {{> meta }}
+    {{> meta pageTitle="Ross's Blog" }}
   </head>
   <body>
     {{> header }}
 
-    <x-counter></x-counter>
+    <main>
+        <x-counter></x-counter>
+    </main>
 
     {{> footer }}
-
-
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
