--- a/not-found/index.html
+++ b/not-found/index.html
@@ -6,8 +6,10 @@
   <body>
     {{> header }}
 
-    <h1>Page not found</h1>
-    <a href="/">Go back to the home page</a>
+    <main>
+        <h1>Page not found</h1>
+        <a href="/">Go back to the home page</a>
+    </main>
 
     {{> footer }}
 
