Adds the intentional practice blog & small styling tweaks

--- a/blogs/intentional-practice/index.html
+++ b/blogs/intentional-practice/index.html
@@ -1,1 +1,1 @@
-{{> blog-post content-key=web-components-with-vite pageTitle="Web Components with Vite" }}
+{{> blog-post content-key=intentional-practice pageTitle="Intentional Practice & Software" }}
